--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/cache/save@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
 
   simple-build:
     needs: cache-V
@@ -51,7 +51,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -73,7 +73,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -125,7 +125,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -171,7 +171,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -209,7 +209,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -236,7 +236,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -263,7 +263,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -290,7 +290,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -331,7 +331,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -358,7 +358,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -380,7 +380,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
@@ -405,7 +405,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.WORK_PATH }}vlang/
-          key: vlang-${{ V_VERSION }}
+          key: vlang-${{ env.V_VERSION }}
           fail-on-cache-miss: true
 
       - name: Install V
