Fix: V_VERSION source was changed to rely on $(v -v) data instead on setup-v `version` to contain commit id

--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -31,7 +31,7 @@ jobs:
           check-latest: true
 
       - name: Set V_VERSION environment variable
-        run: echo "V_VERSION=${{ steps.install-v.outputs.version }}" >> $GITHUB_ENV
+        run: echo "V_VERSION=$(v -v)" >> $GITHUB_ENV
 
       - name: Cache Vlang
         uses: actions/cache/save@v3
