--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -44,8 +44,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        trimming: [ null , -skip-unused ]
-        memory-management: [ null , -autofree ]
+        trimming: [ '', -skip-unused ]
+        memory-management: [ '', -autofree ]
     steps:
       - name: Restore Vlang
         uses: actions/cache/restore@v3
@@ -117,9 +117,9 @@ jobs:
     strategy:
       matrix:
         compiler: [ gcc, clang ]
-        trimming: [ null , -skip-unused ]
-        memory-management: [ null , -autofree ]
-        optimization: [ null , -prod ]
+        trimming: [ '', -skip-unused ]
+        memory-management: [ '', -autofree ]
+        optimization: [ '', -prod ]
     steps:
       - name: Restore Vlang
         uses: actions/cache/restore@v3
